--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.8.4",
     "react-normalize": "^0.4.4",
+    "react-qr-code": "^2.0.11",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
